--- a/package.json
+++ b/package.json
@@ -9,7 +9,10 @@
     "build_push": "npm run build && git add --renormalize . && git commit -n -m \"Created/Updated build\" && git push"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.4",
+    "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
+    "font-awesome": "^4.7.0",
     "vue": "^2.6.11"
   },
   "devDependencies": {
