--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "bootstrap": "^5.1.3",
     "core-js": "^3.6.5",
     "font-awesome": "^4.7.0",
+    "fontawesome": "^5.6.3",
     "vue": "^2.6.11"
   },
   "devDependencies": {
